<resources>
    <string name="app_name">CarParking</string>
    <string name="no_pos_saved">Nessun parcheggio attivo</string>
    <string name="coordinate_label">Coordinate</string>
    <string name="address_label">Indirizzo:</string>
    <string name="level_label">Piano</string>
    <string name="level_input_hint">piano</string>
    <string name="place_label">Posto</string>
    <string name="place_input_hint">posto</string>
    <string name="parking_switch">Parchimetro</string>
    <string name="cost_label">Costo</string>
    <string name="cost_input">costo</string>
    <string name="timelimit_label">Scadenza</string>
    <string name="navigate_btn">Portami!</string>

    <string name="add_time_button">Scadenza</string>
    <string name="time_dialog_title">Scadenza:</string>
    <string name="ok_dialog">OK</string>
    <string name="cancel_btn">Annulla</string>
    <string name="save_btn">Salva</string>
    <string name="note_label">Note</string>
    <string name="done_btn">Fatto</string>
    <string name="city_label">Città:</string>
    <string name="date_label">Data:</string>
    <string name="exp_label">Scandenza parcheggio</string>
    <string name="photo_label">Foto</string>
    <string name="map_label">Mappa</string>
    <string name="delete_btn">Elimina</string>
    <string name="activity_detail_title">Dettagli</string>
    <string name="menu_home">Home</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="history_menu">Storico</string>
    <string name="about_activity_title">About</string>
    <string name="history_activity_title">Storico</string>
    <string name="no_data">Nessun dato</string>

    <string name="creating_dialog_message">Parcheggio salvato correttamente</string>
    <string name="cancel_dialog_message">Sei sicuro?</string>
    <string name="no_dialog">Annulla</string>

    <!-- Current parking card -->
    <string name="current_parking_title">Ultimo parcheggio</string>

    <!-- Titles -->
    <string name="settings_activity_title">Impostazioni</string>

    <!-- toolbar -->
    <string name="menu_about">About</string>
    <string name="menu_settings">Impostazioni</string>


    <!-- shared prefs -->
    <string name="shared_prefs">shared1</string>
    <string name="intro_shown">introshown</string>

    <!-- Preferences -->
    <string name="show_intro_key">show_intro</string>
    <string name="show_intro_settings_title">Mostra intro</string>
    <string name="show_intro_settings_desc">Mostra intro all avvio dell applicazione</string>
    <string name="delete_db_key">delete_db</string>
    <string name="delete_db_title">Cancella Database</string>
    <string name="delete_db_desc">Attenzione! Operazione irrimediabile!</string>
    <string name="notif_key">notif_key</string>
    <string name="notif_title">Notifica scadenza parcheggio</string>
    <string name="notif_desc">Notifica entro</string>
    <string name="enable_notif_key">enable_notif</string>
    <string name="enable_notif_title">Abilita notifiche</string>
    <string name="enable_notif_desc">Abilita notifiche per scadenza parcheggio</string>
    <string name="notif_category">Notifiche</string>
    <string name="misc_pref_title">Varie</string>
    <string name="notif_time_settings_title">Notifica di scandenza del parcheggio</string>
    <string name="account_pref_group">Account</string>
    <string name="change_pass_key">change_pass</string>
    <string name="confirm_dialog">Conferma</string>
    <string name="logout_key">logout_key</string>
    <string name="logout_title">Logout</string>


    <!-- Notification -->
    <string name="notification_title">Parchimetro in scadenza</string>
    <string name="notification_text">Ti ricordo che il tuo parcheggio scadra tra poco!</string>
    <string name="notif_channel_name">CarParkingChannel</string>
    <string name="notif_channel_desc">Channel per notifiche CarParking</string>

    <!-- login -->
    <string name="login_btn">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="registration_btn">Registrati</string>
    <string name="login_to_reg">Registrati</string>
    <string name="reg_to_login">Già registrato? Login</string>
    <string name="logout">Logout</string>
    <string name="recover_pass_btn">Recupera password</string>
    <string name="login_frag_title">Login</string>
    <string name="reg_frag_title">Registrazione</string>
    <string name="recover_frag_title">Recupero password</string>



</resources>
