<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40sp"
    android:paddingBottom="0sp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/recover_frag_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/recoverEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="20sp" />

    <Button
        android:id="@+id/recoverActionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/recover_pass_btn" />
</LinearLayout>