<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15sp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="right|end">

            <ImageButton
                android:id="@+id/closeBtn"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close"
                tools:src="" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_detail_title"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24sp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cityText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/city_label" />

                <TextView
                    android:id="@+id/cityValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/date_label" />

                <TextView
                    android:id="@+id/dateValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/coordText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/coordinate_label" />

                <TextView
                    android:id="@+id/coordinateValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/addressText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/address_label" />

                <TextView
                    android:id="@+id/addressValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/placeText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/place_label" />

                <TextView
                    android:id="@+id/placeValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/levelText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/level_label" />

                <TextView
                    android:id="@+id/levelValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/noteText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/note_label" />

                <TextView
                    android:id="@+id/noteValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/costText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/cost_label" />

                <TextView
                    android:id="@+id/costValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/expText"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/exp_label" />

                <TextView
                    android:id="@+id/expValue"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="right"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_label"
            android:gravity="center"/>
         <FrameLayout
            android:id="@+id/mapFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp">

            <fragment
                android:id="@+id/mapFragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/photoDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/photo_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:gravity="center">

            <ImageView
                android:id="@+id/photoView"
                android:layout_width="400sp"
                android:layout_height="400sp"
                android:layout_margin="0sp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@null"
                android:baselineAlignBottom="false"
                android:padding="20sp"
                android:src="@drawable/ic_delete"
                android:textAlignment="inherit" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
